--- a/Activity3/WebContent/html/week2.css
+++ b/Activity3/WebContent/html/week2.css
@@ -45,3 +45,79 @@ div + p{
 a[target]{
 	background-color: red;
 }
+a:hover{
+	color:blue;
+}
+a:BEFORE {
+	content:"dont u dare !!!";
+} 
+a:visited{
+	green;
+}
+/*a:link{
+	color:violet;
+}*/
+ul{
+  /* list-style-image:url(""../img/gulabj.jpg"");*/
+	list-style-type: square;
+	list-style-position: inside;
+	background-color: black;
+}
+
+
+#forth{
+	background-color: red;
+	width: 580px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;
+    outline-color: blue;
+    outline-style: ridge;
+    outline-width: thick;
+    outline-offset:10px;
+}
+a:active{
+	color:white;
+}
+#customers {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 20px 20px 30px 30px;
+    opacity: 0.4;
+}
+
+#customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
